IJPS-56: To fix search total count when no match found and code clean up